<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txv_perguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/texto_pergunta_1"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <RadioGroup
        android:id="@+id/rbg_principal"
        android:layout_width="343dp"
        android:layout_height="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        >

        <RadioButton
            android:id="@+id/rb_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/azul_claro"
            android:fontFamily="sans-serif"
            android:text="@string/texto_alternativa_a"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

        <RadioButton
            android:id="@+id/rb_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/azul_claro"
            android:fontFamily="sans-serif"
            android:text="@string/texto_alternativa_b"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/azul_claro"
            android:fontFamily="sans-serif"
            android:text="@string/texto_alternativa_c"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_claro"
            android:fontFamily="sans-serif"
            android:text="@string/texto_alternativa_d"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_responder"
        android:layout_width="339dp"
        android:layout_height="58dp"
        android:text="@string/texto_botao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757"
        android:background="@drawable/botao1"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>